# semantic_kernel_with_bing

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
grounding/bing/: bing_search.py
tests/: test_bing_search.py
